test/ppx_repr/deriver/errors/lib_invalid.ml
type t = unit [@@deriving repr { lib = "foo" }] (* should be [Some "foo"] *)
